--- a/flaskstarter/templates/frontend/tutorial.html
+++ b/flaskstarter/templates/frontend/tutorial.html
@@ -6,7 +6,7 @@
 <div class="section03">
   <div class="container" style="padding: 0px;">
     <div class="row justify-content-center">
-      <div class="boldauto36">Tutorial</div>
+      <div class="boldauto36" style="margin-bottom: 50px;">Tutorial</div>
     </div>
     <div class="row">
       <div class="container tutorialCard collapsible" style="padding: 0px; margin-bottom: 24px;">
