--- a/flaskstarter/static/css/template.css
+++ b/flaskstarter/static/css/template.css
@@ -15,6 +15,9 @@ button:focus {
     outline: none;
 }
 
+tr.spaceTop>td {
+    padding-top: 24px;
+}
 
 /*font*/
 
@@ -194,6 +197,18 @@ button:focus {
     justify-items: start;
 }
 
+/*button*/
+
+.searchButton {
+    background: #045547;
+    box-shadow: 0px 8px 16px -2px rgba(35, 101, 89, 0.3);
+    border-radius: 8px;
+    padding: 10px 44px;
+    border: 0px;
+    color: #ffffff;
+    -webkit-appearance: none;
+    font-size: 16px;
+}
 
 /*my_tasks*/
 
